--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -86,7 +86,7 @@
   }
 
 @book{akl,
-  author       = {A. D. Aleksandrov and A. N. Kolmogorov and M. A. Lavrent\'ev},
+  author       = {A. D. Aleksandrov and A. N. Kolmogorov and M. A. Lavrent/'ev},
   title        = {Mathematics: Its Content, Methods, and Meaning},
   shorttitle   = {Mathematics\ldots},
   publisher    = {Dover Publications},
@@ -316,9 +316,9 @@
   }
 
 @book{descartes1637,
-  author       = {Ren\'e Descartes},
-  title        = {La g\'eom\'etrie},
-  shorttitle   = {La g\'eom\'etrie (The Geometry)},
+  author       = {Ren/'e Descartes},
+  title        = {La g/'eom/'etrie},
+  shorttitle   = {La g/'eom/'etrie (The Geometry)},
   year         = {1637},
   addressX     = {Paris},
   publisherX   = {A. Hermann},
@@ -328,23 +328,23 @@
   }
 
 @book{descartes1637e,
-  author       = {Ren\'e Descartes},
+  author       = {Ren/'e Descartes},
   translator   = {Marcia L. Latham and David Eugene Smith},
   title        = {The Geometry of Rene Descartes},
-  shorttitle   = {The Geometry of Rene Descartes (La g\'eom\'etrie)},
+  shorttitle   = {The Geometry of Rene Descartes (La g/'eom/'etrie)},
   publisher    = {Courier Dover Publications},
   year         = {1954},
   month        = {June 1},
   isbn         = {0486600688},
   oclc         = {390697},
-  note         = {orginally published by Open Court Publishing, Chicago, 1925; translation of La g\'eom\'etrie},
+  note         = {orginally published by Open Court Publishing, Chicago, 1925; translation of La g/'eom/'etrie},
   urlw         = {http://www.worldcat.org/isbn/0486600688},
   url          = {http://books.google.com/books?vid=isbn0486600688},
   urla         = {http://www.amazon.com/dp/0486600688},
   }
 
 @book{descartes_method_eng,
-  author       = {Ren\'e Descartes},
+  author       = {Ren/'e Descartes},
   title        = {Discourse on the Method of Rightly Conducting the Reason in the Search for Truth in the Sciences},
   shorttitle   = {Discourse on the Method},
   year         = {1637}, 
@@ -354,8 +354,8 @@
 
 @book{descartes_method,
   author       = {Ren/'e Descartes},
-  title        = {Discours de la m\'ethode pour bien conduire sa raison,  et chercher la verite' dans les sciences},
-  shorttitle   = {Discours de la m\'ethode},
+  title        = {Discours de la m/'ethode pour bien conduire sa raison,  et chercher la verite' dans les sciences},
+  shorttitle   = {Discours de la m/'ethode},
   year         = {1637}, 
   publisher    = {Jan Maire},
   address      = {Leiden},
@@ -364,14 +364,14 @@
   }
 
 @book{descartes_rules,
-  author       = {Ren\'e Descartes},
+  author       = {Ren/'e Descartes},
   title        = {Regulae ad directionem ingenii},
   year         = {1684},
   url          = {http://www.fh-augsburg.de/~harsch/Chronologia/Lspost17/Descartes/des_re00.html},
   }
 
 @book{descartes_rules_eng,
-  author       = {Ren\'e Descartes},
+  author       = {Ren/'e Descartes},
   title        = {Rules for Direction of the Mind},
   year         = {1684},
   url          = {http://en.wikisource.org/wiki/Rules_for_the_Direction_of_the_Mind},
@@ -891,7 +891,7 @@
 
 @book{pascal1670,
   author       = {Blaise Pascal},
-  title        = {Pens\'ees},
+  title        = {Pens/'ees},
   publisher    = {Wikisource},
   year         = {1670},
   url          = {http://en.wikisource.org/wiki/Pens%C3%A9es},
@@ -1129,22 +1129,22 @@
   }
 
 @incollection{autonne1901,
-  author       = {L\'eon Autonne},
+  author       = {L/'eon Autonne},
   title        = {Sur l'Hermitien (On the Hermitian)},
-  booktitle    = {Comptes Rendus Des S\'eAnces De L'Acad\'eMie Des Sciences},
-  publisher    = {De L'Acad\'emie des sciences (Academy of Sciences)},
+  booktitle    = {Comptes Rendus Des S/'eAnces De L'Acad/'eMie Des Sciences},
+  publisher    = {De L'Acad/'emie des sciences (Academy of Sciences)},
   address      = {Paris},
   volume       = {133},
   year         = {1901},
   pages        = {209--268},
   language     = {French},
   url          = {http://visualiseur.bnf.fr/Visualiseur?O=NUMM-3089},
-  note         = {Comptes Rendus Des S\'eAnces De L'Acad\'eMie Des Sciences
+  note         = {Comptes Rendus Des S/'eAnces De L'Acad/'eMie Des Sciences
                   (Reports Of the Meetings Of the Academy of Science)},
   }
 
 @article{autonne1902,
-  author       = {L\'eon Autonne},
+  author       = {L/'eon Autonne},
   title        = {Sur l'Hermitien (On the Hermitian)},
   journalx     = {Rendiconti del Circolo Matematico di Palermo (Statements of the Mathematical Circle of Palermo)},
   journal      = {Rendiconti del Circolo Matematico di Palermo}, 
@@ -1260,8 +1260,8 @@
 @incollection{lagrange1795,
   author       = {Lagrange},
   year         = {1795},
-  title        = {Le\c{c}ons \'el\'ementaires sur les math\'ematiques donn\'ees \`a l'\'ecole normale en 1795, S\'eances des Ecoles Normales, 1794--1795},
-  shorttitle   = {Le\c{c}ons \'el\'ementaires sur les math\'ematiques\ldots},
+  title        = {Le\c{c}ons /'el/'ementaires sur les math/'ematiques donn/'ees \`a l'/'ecole normale en 1795, S/'eances des Ecoles Normales, 1794--1795},
+  shorttitle   = {Le\c{c}ons /'el/'ementaires sur les math/'ematiques\ldots},
   booktitle    = {{\OE}uvres compl\`etes},
   volume       = {7},
   pages        = {183--288},
@@ -1270,17 +1270,17 @@
 
 @phdthesis{lalescu1908,
   author       = {Traian Lalescu},
-  title        = {Sur les \'equations de Volterra},
+  title        = {Sur les /'equations de Volterra},
   school       = {University of Paris},
   year         = {1908},
-  note         = {advisor was \'Emile Picard},
+  note         = {advisor was /'Emile Picard},
   }
 
 @book{lalescu1911,
   author       = {Traian Lalescu},
-  title        = {Introduction \`a la th\'eorie des \'equations int\'egrales
+  title        = {Introduction \`a la th/'eorie des /'equations int/'egrales
                   (Introduction to the Theory of Integral Equations)},
-  shorttitle   = {Introduction \`a la th\'eorie des \'equations int\'egrales},
+  shorttitle   = {Introduction \`a la th/'eorie des /'equations int/'egrales},
   publisher    = {Librairie Scientifique A. Hermann},
   address      = {Paris},
   year         = {1911},
@@ -1336,9 +1336,9 @@
   author       = {Johan de Witt},
   title        = {Elementa curvarum linearum (Elements of Curves)},
   year         = {1659},
-  booktitle    = {La G\'eom\'etrie},
+  booktitle    = {La G/'eom/'etrie},
   note         = {Elementa curvarum linearum was an appendix to de Witt's translation of
-                  of Descartes' {\em La G\'eom\'etrie}},
+                  of Descartes' {\em La G/'eom/'etrie}},
   }
 
 @article{hilbert1927,
@@ -1547,7 +1547,7 @@
                   is available at \url{http://www.cs.xu.edu/math/Sources/Montmort/stpetersburg.pdf}},
   address      = {Providence, Rhode Island},
   publisher    = {American Mathematical Society},
-  urlg         = {http://books.google.com.tw/books?id=Cqk_AAAAcAAJ},
+  urlg         = {http://books.google.com/books?id=Cqk_AAAAcAAJ},
   pages        = {414},
   volume       = {307},
   }
@@ -1577,22 +1577,36 @@
 
   
 @book{papoulis,
+  isbn         = {0070484775},
+  oclc         = {22704249},
   author       = {Anthanasios Papoulis},
   title        = {Probability, Random Variables, and Stochastic Processes},
   edition      = {3},
   publisher    = {McGraw-Hill},
   address      = {New York},
   year         = {1991},
-  isbn         = {0-07-048477-5},
-  oclc         = {22704249},
   urlw         = {http://www.worldcat.org/isbn/0070484775},
-  url          = {http://books.google.com.tw/books?vid=ISBN0070484775},
+  url          = {http://books.google.com/books?vid=ISBN0070484775},
+  language     = {English},
+  }
+
+@book{papoulis1984,
+  isbn         = {0070484686},
+  author       = {Anthanasios Papoulis},
+  title        = {Probability, Random Variables, and Stochastic Processes},
+  edition      = {2},
+  publisher    = {McGraw-Hill Book Company},
+  address      = {New York},
+  year         = {1984},
+  url          = {http://books.google.com/books?vid=ISBN0070484686},
+  urla         = {http://www.amazon.com/dp/0070484686},
+  pages        = {576},
   language     = {English},
   }
 
 @book{poincare_calc_prob,
-  author       = {Henri Poincar\'e},
-  title        = {Calcul Des Probabilit\'es},
+  author       = {Henri Poincar/'e},
+  title        = {Calcul Des Probabilit/'es},
   year         = {1912},
   publisher    = {De L'ecole Polytechnique},
   address      = {Paris},
