--- a/common/pdfcdf.tex
+++ b/common/pdfcdf.tex
@@ -26,33 +26,36 @@
 %=======================================
 The concept of the \hie{random variable} is widely used in probability and
 random processes.
-Before defining a random variable formally, note two things that a random variable is \emph{not}:\citetbl{
+Before what a \fncte{random variable} \emph{is}, note two things that a \fncte{random variable} is \emph{not} (next remark).
+%---------------------------------------
+\begin{remark}
+\citetbl{
   \citerpg{miller2006}{130}{0471458929},
-  \citerpg{feldman2010}{4}{3642051588}, %{``The name ``random variable" is actually a misnomer, since it is not random and not a variable.\ldots the random variable simply maps each point (outcome) in the sample space to a number on the real line\ldots Technically, the space into which the random variable maps the sample space may be more general than the real line\ldots"},
-  \citerpg{curry2011}{4}{3642166180}
+  \citerpgc{feldman2010}{4}{3642051588}{``The name ``random variable" is actually a misnomer, since it is not random and not a variable.\ldots the \fncte{random variable} simply maps each point (outcome) in the sample space to a number on the real line\ldots Technically, the space into which the \fncte{random variable} maps the sample space may be more general than the real line\ldots"},
+  \citerpg{curry2011}{4}{3642166180},
+  \citerpgc{trivedi2016}{2.1}{1119314208}{``The term ``random variable" is actually a misnomer, since a \fncte{random variable} $\rvX$ is really a function whose domain is the sample space $S$, and whose range is the set of all real numbers, $\R$."}
   }
-\\\indentx\begin{tabular}{cl}
-    \imark & A random variable is {\bf not random}.\\
-    \imark & A random variable is {\bf not a variable}.
-\end{tabular}\\
+%---------------------------------------
+As pointed out by others, the term ``random variable" is a ``misnomer":
+\\\rembox{
+  \begin{array}{NM}
+    \imark & A \fncte{random variable} is {\bf not random}.\\
+    \imark & A \fncte{random variable} is {\bf not a variable}.
+  \end{array}}
+\end{remark}
+
 What is it then? It is a \structe{function} (next definition).
 In particular, it is a function that maps from an underlying stochastic process into $\R$.
 Any ``\prope{randomness}" (whatever that means) it may \emph{appear} to have comes from the stochastic process it 
-is mapping \emph{from}. But the function itself (the random variable itself) is very deterministic and well-defined.
+is mapping \emph{from}. But the function itself (the \fncte{random variable} itself) is very deterministic and well-defined.
 %
-%Before defining what a random variable is, here are two things that
-%it is not:
-%\begin{enume}
-%  \item A random variable is {\bf not random}.
-%  \item A random variable is {\bf not a variable}.
-%\end{enume}
-%A random variable is actually a \hie{function} $X(\omega)$, where
+%A \fncte{random variable} is actually a \hie{function} $\rvX(\omega)$, where
 %$\omega\in\pso$ is an outcome of an experiment.
-%More specifically, in a probability space $\ps$,
-%a random variable is a mapping from the set $\pso$ of outcomes to the set of real numbers.
+%More specifically, in a \structe{probability space} $\ps$,
+%a \fncte{random variable} is a mapping from the set $\pso$ of outcomes to the set of real numbers.
 %What gives it the appearance of being random is that the outcome $\omega$
 %of the experiment appears to be random to the observer.
-%So the random variable $X(\omega)$ is simply a function of an underlying
+%So the \fncte{random variable} $\rvX(\omega)$ is simply a function of an underlying
 %mechanism that appears to be random.
 %---------------------------------------
 \begin{definition}
@@ -60,18 +63,16 @@ is mapping \emph{from}. But the function itself (the random variable itself) is 
 \citetbl{
   \citerp{papoulis}{63}
   }
-\label{def:rvX}
 %---------------------------------------
-Let $\ps$ be a \structe{probability space} \xref{def:ps} on a 
-\structe{orthocomplemented lattice} $\psL\eqd\latocX$.
-A \fnctd{random variable} $\rvX$ is a function $\rvX:\setX\to\R$.
+Let $\ps$ be a \structe{probability space} \xref{def:ps}.
+A \fnctd{random variable} $\rvX$ is a function $\rvX:\pso\to\R$.
 \end{definition}
 
 The probability information about $\sigma$-algebra $\pse$ is completely
-specified by measure $\psp$.
-However, sometimes it is more convenient to express this same measure
+specified by \fncte{measure} $\psp$.
+However, sometimes it is more convenient to express this same \fncte{measure}
 information in terms of the \hie{probability density function} or the
-\hie{cumulative distribution function} of the probability space.
+\hie{cummulative distribution function} of the \structe{probability space}.
 %---------------------------------------
 \begin{definition}
 \citetbl{
@@ -80,20 +81,19 @@ information in terms of the \hie{probability density function} or the
 \label{def:pdf}
 \label{def:cdf}
 %---------------------------------------
-Let $\ps$ be a \structe{probability space} \xref{def:ps} and
-$\rvX:\pso\to\R$ a random variable. Then
-a \fnctd{probability density function} (\fnctd{pdf})      $\ppx:\pse\to\intcc{0}{1}$ and
-a \fnctd{cumulative distribution function} (\fnctd{cdf}) $\pcx:\pse\to\intcc{0}{1}$
-are defined as
-\defbox{\begin{array}{rc>{\ds}lD}
-  \pcx(x) &\eqd& \psp\brb{\rvX \le x }
-          & (cumulative distribution function)
-          \\
-  \ppx(x) &\eqd& \ddx\pcx(x)
-          & (probability density function)
-          \\
+Let $\ps$ be a \structe{probability space} and
+$\rvX:\pso\to\R$ a \fncte{random variable}.
+\defbox{\begin{array}{MMrc>{\ds}l}
+  A \fnctd{probability density function} 
+  & (\fnctd{pdf}) $\ppx$ is defined as
+  & \ppx(x) &\eqd& \lim_{\epsilon\to 0} \frac{1}{\epsilon}\psp\setn{x \le \rvX < x+\epsilon}
+  \\
+  A \fnctd{cummulative distribution function} 
+  & (\fnctd{cdf}) $\pcx$ is defined as
+  & \pcx(x) &\eqd& \psp\setn{\rvX < x }
 \end{array}}
 \end{definition}
+
 
 %---------------------------------------
 \begin{definition}
@@ -152,10 +152,10 @@ The \fnctd{uniform distribution} $\ppx(x)$ is defined as
 %======================================
 \section{Properties}
 %======================================
-\prefpp{def:pdf} defines the pdf and cdf of a probability space
-$\ps$ in terms of measure $\psp$.
-Conversely, the probability measure $\psp\brb{a\le X<b}$
-of an event $\{a\le X<b\}$ can be
+\prefpp{def:pdf} defines the pdf and cdf of a \structe{probability space}
+$\ps$ in terms of \fncte{measure} $\psp$.
+Conversely, the probability \fncte{measure} $\psp\setn{a\le\rvX<b}$
+of an event $\{a\le\rvX<b\}$ can be
 expressed in terms of either the pdf or cdf.
 %---------------------------------------
 \begin{theorem}
@@ -194,6 +194,46 @@ Then
   \\&= \brlr{\pcx(x)}_{x=b} - \brlr{\pcx(x)}_{x=a}
     && \text{by \thme{Fundamental theorem of calculus}}
   \\&= \pcx(b) - \pcx(a)
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{theorem}
+%---------------------------------------
+Let $\ps$ be a \structe{probability space},
+$\rvX:\pso\to\R$ be a \fncte{random variable}, and $\intoo{a}{b}$ a \structe{real interval}.
+\thmbox{\begin{array}{rc>{\ds}l}
+  \psp\setn{a\le\rvX<b}
+    &=& \int_a^b \ppx(x) \dx
+  \\&=& \int_{-\infty}^b \pcx(x) \dx - \int_{-\infty}^a \pcx(x) \dx
+\end{array}}
+\end{theorem}
+
+The properties of the pdf follow closely the properties of \fncte{measure} $\psp$.
+%---------------------------------------
+\begin{theorem}
+%---------------------------------------
+\thmbox{\begin{array}{rc>{\ds}l}
+  \pp(x|y) &=& \frac{\pp(x,y)}{\pp(y)}  \\
+  \ppx(x)  &=& \int_{y\in\R}\ppxy(x,y) \dy
+\end{array}}
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \ppx[x|y](x|y)
+    &\eqd \lim_{\epsilon\to0} \frac{1}{\epsilon} \psp\set{x\le\rvX < x+\epsilon}{\rvY=y}
+  \\&\eqd \lim_{\epsilon\to0} \frac{1}{\epsilon} \frac{\psp\setn{(x\le\rvX < x+\epsilon) \land (\rvY=y)}}
+                                                      {\psp\setn{\rvY=y}}
+  \\&=    \lim_{\epsilon\to0} \frac{1}{\epsilon} \frac{\psp\setn{(x\le\rvX < x+\epsilon) \land (y\le\rvY<y+h)}}
+                                                      {\psp\setn{y\le\rvY<y+\epsilon}}
+  \\&\eqd \frac{\ppxy(x,y)}{\ppy(y)}
+\\
+\\
+  \int_{y\in\R}\ppxy(x,y)\dy
+    &\eqd \lim_{\epsilon\to0} \frac{1}{\epsilon}
+          \int_{y\in\R} \psp\setn{x\le\rvX<x+\epsilon, y\le\rvY<y+\epsilon} \dy
+  \\&=    \lim_{\epsilon\to0} \frac{1}{\epsilon} \psp\setn{x\le\rvX<x+\epsilon}
+  \\&\eqd \ppx(x)
 \end{align*}
 \end{proof}
 
