--- a/common/random.tex
+++ b/common/random.tex
@@ -4,7 +4,7 @@
 %============================================================================
 
 %======================================
-\chapter{Random Processes}
+\chapter{Continuous Random Processes}
 \label{app:random_processes}
 %======================================
 \qboxnps
@@ -24,10 +24,10 @@
 
 
 %=======================================
-\section{Continuous-time random processes}
+%\section{Continuous-time random processes}
 %=======================================
 %=======================================
-\subsection{Definitions}
+\section{Definitions}
 %=======================================
 %---------------------------------------
 \begin{definition}
@@ -84,16 +84,6 @@ and \prefp{fig:X(t,w)graph}.
 
 %---------------------------------------
 \begin{definition}
-\footnote{
-   The equation $\int_{u\in\R}\Rxx(t,u) f(u) \du$ is a
-   \textbf{Fredholm integral equation of the first kind} and
-   $\Rxx(t,u)$ is the \textbf{kernel} of the equation.
-   References: 
-     \citer{fredholm1900},
-     \citerp{fredholm1903}{page 365},
-     \citerp{michel1993}{page 97},
-     \citerp{keener}{page 101}
-   }
 %\label{def:Mx}
 \label{def:Rxx}
 \label{def:opR}
@@ -107,12 +97,26 @@ Let $\rvx(t)$ and $\rvy(t)$ be random processes.\\
      The \fnctd{mean}                     & \pmeanx(t) & of $\rvx(t)$              is & \pmeanx(t)&\eqd& \pE\brs{\rvx(t)}                    %& \text{(\prope{mean functional})} \\
    \\The \fnctd{crosscorrelation}         & \Rxy(t)    & of $\rvx(t)$ and $\rvy(t)$is & \Rxy(t,u) &\eqd& \pE\brs{\rvx(t)\rvy^\ast(u)}        %& \text{(\prope{cross-correlation bilinear functional})} \\
    \\The \fnctd{autocorrelation function} & \Rxx(t)    & of $\rvx(t)$              is & \Rxx(t,u) &\eqd& \pE\brs{\rvx(t)\rvx^\ast(u)}        %& \text{(\prope{auto-correlation bilinear functional})} \\
-   \\The \fnctd{autocorrelation operator} & \opR\ff    & of $\ff(t)$               is & \opR f    &\eqd& \int_{u\in\R}\Rxx(t,u) f(u) \du     %& \text{(\prope{auto-correlation operator})}
+   \\The \fnctd{autocorrelation operator} & \opR\ff    & of $\ff(t)$               is & \opR f    &\eqd& \int_{u\in\R}\Rxx(t,u)\ff(u) \du     %& \text{(\prope{auto-correlation operator})}
 \end{array}}
 \end{definition}
 
 %---------------------------------------
-\subsection{Properties}
+\begin{remark}
+\footnote{
+     \citer{fredholm1900},
+     \citerp{fredholm1903}{365},
+     \citerp{michel1993}{97},
+     \citerp{keener}{101}
+   }
+%---------------------------------------
+The equation $\int_{u\in\R}\Rxx(t,u)\ff(u) \du$ is a
+   \ope{Fredholm integral equation of the first kind} and
+   $\Rxx(t,u)$ is the \ope{kernel} of the equation.
+\end{remark}
+
+%---------------------------------------
+\section{Properties}
 %---------------------------------------
 
 %---------------------------------------
@@ -128,25 +132,24 @@ let $\Rxx(t,u)$ be the auto-correlation of $\fx(t)$.
 \thmbox{
 \begin{array}{rcll}
    \Rxx(t,u) &=& \Rxx^\ast(u,t) & \text{(\prope{conjugate symmetric})}\\
-   \Rxy(t,u) &=& \Ryx^\ast(u,t) & \text{(\prope{conjugate symmetric})}.
+   \Rxy(t,u) &=& \Ryx^\ast(u,t) & 
 \end{array}
 }
 \end{theorem}
-
 \begin{proof}
-\[\begin{array}{*{12}{l}}
+\begin{align*}
    \Rxx(t,u)
-      &\eqd& \pE\brs{\rvx(t) \rvx^\ast(u)}
-      &=&      \pE\brs{\rvx^\ast(u) \rvx(t)}
-      &=&      \brp{ \pE\brs{\rvx(u) \rvx^\ast(t)}}^\ast
-      &\eqd& \Rxx^\ast(u,t)
+      &\eqd \pE\brs{\rvx(t) \rvx^\ast(u)}
+      &=    \pE\brs{\rvx^\ast(u) \rvx(t)}
+      &=    \brp{ \pE\brs{\rvx(u) \rvx^\ast(t)}}^\ast
+      &\eqd \Rxx^\ast(u,t)
 \\
    \Rxy(t,u)
-      &\eqd& \pE\brs{\rvx(t) \rvy^\ast(u)}
-      &=&      \pE\brs{\rvy^\ast(u) \rvx(t) }
-      &=&      \brp{\pE\brs{\rvy(u) \rvx^\ast(t)}}^\ast
-      &\eqd& \Ryx^\ast(u,t)
-\end{array}\]
+      &\eqd \pE\brs{\rvx(t) \rvy^\ast(u)}
+      &=    \pE\brs{\rvy^\ast(u) \rvx(t) }
+      &=    \brp{\pE\brs{\rvy(u) \rvx^\ast(t)}}^\ast
+      &\eqd \Ryx^\ast(u,t)
+\end{align*}
 \end{proof}
 
 
@@ -305,7 +308,7 @@ Using these two results, we can prove the following:
 \end{proof}
 
 %=======================================
-\subsection{Karhunen-Lo\`{e}ve Expansion}
+\section{Karhunen-Lo\`{e}ve Expansion}
 \label{sec:KL}
 \index{Karhunen-Lo\`{e}ve Expansion}
 \index{eigenfunctions}
@@ -331,7 +334,7 @@ This criterion is called the  Karhunen-Lo\`{e}ve criterion for $\rvx(t)$.
 
 
 %=======================================
-\subsection{LTI Operations on non-stationary random processes}
+\section{LTI Operations on non-stationary random processes}
 \index{LTI!operations on non-stationary random processes}
 %=======================================
 \begin{figure}[ht]\color{figcolor}
@@ -461,7 +464,7 @@ Then
 
 
 %=======================================
-\subsection{LTI Operations on WSS random processes}
+\section{LTI Operations on WSS random processes}
 \index{LTI!operations on WSS random processes}
 \index{WSS}
 \index{wide sense stationary}
@@ -535,7 +538,7 @@ is equivalent to
      &\eqd& \int_\tau \Rxx(\tau) e^{-i2\pi f\tau} \dtau
    \\&=&    \int_\tau \pE\brs{\rvx(t+\tau)\rvx^\ast(t)} e^{-i2\pi f\tau} \dtau
    \\&=&    \pE\brs{\rvx^\ast(t) \int_\tau \rvx(t+\tau) e^{-i2\pi f\tau} \dtau }
-   \\&=&    \pE\brs{\rvx^\ast(t) \int_{u\in\R}\rvx(u) e^{-i2\pi f(u-t)} \du }
+   \\&=&    \pE\brs{\rvx^\ast(t) \int_{u\in\R}\rvx(u) e^{-i2\pi\ff(u-t)} \du }
    \\&=&    \pE\brs{\rvx^\ast(t)e^{i2\pi ft} \int_{u\in\R}\rvx(u) e^{-i2\pi fu} \du }
    \\&=&    \pE\brs{\rvx^\ast(t)e^{i2\pi ft} \ft{x}(f) }
    \\&=&    \pE\brs{\rvx^\ast(t)e^{i2\pi ft}} \ft{x}(f)
@@ -808,7 +811,7 @@ Then $\Rxx(\tau)$ is \textbf{conjugate symmetric} such that
 
 
 %---------------------------------------
-\subsection{Whitening}
+\section{Whitening}
 \index{whitening filter}
 \label{sec:whiten}
 %---------------------------------------
@@ -1000,760 +1003,5 @@ then the following are true:
 \end{eqnarray*}
 \end{proof}
 
-
-
-
-%=======================================
-\section{Discrete-time random processes}
-%=======================================
-%---------------------------------------
-\subsection{Definitions}
-%---------------------------------------
-%---------------------------------------
-\begin{definition}
-\label{def:Rxxnm}
-\label{def:Ryynm}
-\label{def:Rxynm}
-%---------------------------------------
-Let $\rvx(n)$ and $\rvy(n)$ be \fncte{random sequence}s.\\
-\defbox{\begin{array}{MlMlc>{\ds}l}
-     The \fnctd{autocorrelation}  & \Rxx(n,m)  & of $\rvx(n)$               is & \Rxx(n,m) &\eqd& \pE\brs{\rvx(n)\rvx^\ast(n+m)}        %& \text{(\prope{auto-correlation bilinear functional})} \\
-   \\The \fnctd{crosscorrelation} & \Rxy(n,m)  & of $\rvx(n)$ and $\rvy(n)$ is & \Rxy(n,m) &\eqd& \pE\brs{\rvx(n)\rvy^\ast(n+m)}        %& \text{(\prope{cross-correlation bilinear functional})} \\
-  %\\The \fnctd{autocorrelation operator} & \opR\ff    & of $\ff(t)$               is & \opR f    &\eqd& \int_{u\in\R}\Rxx(t,u) f(u) \du     %& \text{(\prope{auto-correlation operator})}
-\end{array}}
-\end{definition}
-
-%---------------------------------------
-\subsection{Properties}
-%---------------------------------------
-%---------------------------------------
-\begin{theorem}
-\label{thm:Rxxnm}
-\label{thm:Ryynm}
-\label{thm:Rxynm}
-%---------------------------------------
-\thmbox{\begin{array}{rcl}
-   \Rxx(n,m) &=& \Rxx^\ast(n+m,-m)\\ 
-   \Rxy(n,m) &=& \Ryx^\ast(n+m,-m)
-\end{array}}
-\end{theorem}
-\begin{proof}
-\begin{align*}
-  \Rxy(n,m)
-     &\eqd \pE\brs{\rvx(n) \rvy^\ast(n+m)}
-     && \text{by definition of $\Rxy(n,m)$}
-     && \text{\xref{def:Rxynm}}
-   \\&= \pE\brs{\rvy^\ast(n+m) \rvx(n)}
-     && \text{by \prope{commutative} property of $\fieldC$}
-     && \text{\ifxref{algebra}{def:field}}
-   \\&= \brp{\pE\brs{\rvy(n+m) \rvx^\ast(n)}}^\ast
-     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-     && \text{\xref{def:staralg}}
-   \\&= \brp{\pE\brs{\rvy(n+m) \rvx^\ast(n+m-m)}}^\ast
-     && \text{by \prope{additive identity} property of $\fieldR$}
-     && \text{\ifxref{algebra}{def:field}}
-   \\&\eqd \Ryx^\ast(n+m,-m)
-     && \text{by definition of $\Rxy$}
-     && \text{\xref{def:Rxy}}
-   \\
-   \\
-   \Rxx(n,m)
-     &= \brlr{\Rxy(n,m)}_{y=x}
-   \\&= \brlr{\Rxy^\ast(n+m,-m)}_{y=x}
-     && \text{by previous result}
-   \\&= \Rxx^\ast(n+m,-m)
-\end{align*}
-\end{proof}
-
-\begin{figure}[ht]\color{figcolor}
-\begin{fsK}
-\begin{center}
-  \setlength{\unitlength}{0.2mm}
-  \begin{picture}(300,130)(-100,-80)
-  \thicklines
-  \put(-100,  10 ){\makebox (100, 40)[b]{$\rvx(n)$}  }
-  \put(-100, -50 ){\makebox (100, 40)[t]{$\Rxx(n,m)$}  }
-  \put(-100,   0 ){\vector  (  1,  0){100}             }
-  \put(   0, -50 ){\framebox(100,100){$\conv\fh(n)$}  }
-  \put( 100,   0 ){\vector  (  1,  0){100}             }
-  \put( 110,   0 ){\makebox (100, 40)[lb]{$\ds\rvy(n)=\fh(n)\conv\rvx(n)=\sum_k\fh(k)\rvx(n-k)$}  }
-  \put( 100, -50 ){\makebox (100, 40)[t]{$\Ryy(n,m)$}  }
-  \put(  50, -60 ){\makebox (  0,  0)[t]{$\Rxy(n,m)$}  }
-  \end{picture}
-\caption{
-   Linear system with random process input and output
-   \label{fig:d-linear-sys}
-   }
-\end{center}
-\end{fsK}
-\end{figure}
-
-The next theorem describes the statistical properties of an LTI system
-with impulse response $\fh(t)$ \xref{fig:d-linear-sys}.
-
-%---------------------------------------
-\begin{theorem}
-\footnote{
-  \citerp{papoulis}{310}
-  }
-\label{thm:Rxyh}
-%---------------------------------------
-Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$, 
-\fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
-\thmboxt{
-  $\brb{\begin{array}{M}
-    $\opS$ is \prope{linear time invariant} (\prope{LTI})
-  \end{array}}
-  \quad\implies$
-  \\\qquad$
-  \brb{\begin{array}{Frc>{\ds}lc>{\ds}lD}
-       (A).&\Rxy(n,m) &=& \Rxx(n,m)\conv \fh^\ast(m) &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxx(n,m-k) & and 
-     \\(B).&\Ryy(n,m) &=& \Rxy(n,m)\conv \fh(m)      &\eqd& \sum_{k\in\Z} \fh(k)      \Rxy(n,m-k) & and 
-     \\(C).&\Ryy(n,m) &=& \Rxx(n,m)\conv \fh(m)\conv h^\ast(m)
-                      &\eqd& \mc{2}{l}{\ds\sum_{p\in\Z} \sum_{k\in\Z} \fh(k)h^\ast(p) \Rxx(n,m-p-k)}
-  \end{array}}$
-  }
-\end{theorem}
-
-\begin{proof}
-\begin{align*}
-   \Rxy(n,m)
-     &\eqd \pE\brs{\rvx(n) \rvy^\ast(n+m) }
-     && \text{by definition of $\Rxy(n,m)$}
-     && \text{\xref{def:Rxynm}}
-   \\&= \pE\brs{\rvx(n) \brp{\fh\conv\rvx}^\ast(n+m)}
-     && \text{by \prope{LTI} hypothesis}
-   \\&\eqd \pE\brs{\rvx(n) \brp{ \sum_{k\in\Z} h(k) \rvx(n+m-k) }^\ast }
-     && \text{by definition of \ope{convolution}}
-     && \text{\xref{def:dsp_conv}}
-   \\&=    \pE\brs{\rvx(n) \sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(n+m-k)  }
-     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-     && \text{\xref{def:staralg}}
-   \\&=    \pE\brs{ \sum_{k\in\Z} \fh^\ast(k) \rvx(n)\rvx^\ast(n+m-k)  }
-     && \text{by \prope{distributive} property of $\fieldC$}
-     && \text{\ifxref{algebra}{def:field}}
-   \\&= \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(n) \rvx^\ast(n+m-k) }
-     && \text{by \prope{linear} property of $\pE$}
-     && \text{\xref{thm:pE}}
-   \\&\eqd \sum_{k\in\Z} \fh^\ast(k) \Rxx(n,m-k)
-     && \text{by definition of $\Rxx(n,m)$}
-     && \text{\xref{def:Rxxnm}}
-   \\&\eqd \Rxx(n,m) \conv \fh^\ast(m)
-     && \text{by definition of \ope{convolution}}
-     && \text{\xref{def:dsp_conv}}
-   \\
-   \\
-   \Ryy(n,m)
-     &\eqd \pE\brs{\rvy(n) \rvy^\ast(n+m) }
-     && \text{by definition of $\Rxy(n,m)$}
-     && \text{\xref{def:Rxynm}}
-   \\&= \pE\brs{\rvy(n) \brp{\fh\conv\rvy}^\ast(n+m)}
-     && \text{by \prope{LTI} hypothesis}
-   \\&\eqd \pE\brs{\rvy(n) \brp{ \sum_{k\in\Z} h(k) \rvy(n+m-k) }^\ast }
-     && \text{by definition of \ope{convolution}}
-     && \text{\xref{def:dsp_conv}}
-   \\&=    \pE\brs{\rvy(n) \sum_{k\in\Z} \fh^\ast(k) \rvy^\ast(n+m-k)  }
-     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-     && \text{\xref{def:staralg}}
-   \\&=    \pE\brs{ \sum_{k\in\Z} \fh^\ast(k) \rvy(n)\rvy^\ast(n+m-k)  }
-     && \text{by \prope{distributive} property of $\fieldC$}
-     && \text{\ifxref{algebra}{def:field}}
-   \\&=    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvy(n) \rvy^\ast(n+m-k) }
-     && \text{by \prope{linear} property of $\pE$}
-     && \text{\xref{thm:pE}}
-   \\&\eqd \sum_{k\in\Z} \fh^\ast(k) \Ryy(n,m-k)
-     && \text{by definition of $\Ryy(n,m)$}
-     && \text{\xref{def:Ryynm}}
-   \\&\eqd \Ryy(n,m) \conv \fh^\ast(m)
-     && \text{by definition of \ope{convolution}}
-     && \text{\xref{def:dsp_conv}}
-   \\
-   \\
-   \Ryy(n,m)
-     &= \Rxy(n,m)\conv \fh(m)
-     && \text{by previous result}
-   \\&= \brs{\Rxx(n,m) \conv \fh^\ast(m)}\conv \fh(m)
-     && \text{by previous result}
-   \\&= \Rxx(n,m) \conv \fh(m) \conv \fh^\ast(m)
-     && \text{by previous result}
-\\
-\\
-   \Ryy(n,m)
-     &= \Rxx(n,m)\conv\fh(m) \conv \fh^\ast(m)
-     && \text{by previous result}
-   \\&\eqd \sum_{p\in\Z}\fh^\ast(p) \brs{\Rxx(n,m-p)\conv\fh(m)}
-     && \text{by definition of \ope{convolution}}
-     && \text{\xref{def:dsp_conv}}
-   \\&= \sum_{p\in\Z}\fh^\ast(p) \sum_{k\in\Z}\fh(k) \Rxx(n,m-p-k)
-     && \text{by definition of \ope{convolution}}
-     && \text{\xref{def:dsp_conv}}
-   \\&= \sum_{p\in\Z} \sum_{k\in\Z} \fh(k) \fh^\ast(p) \Rxx(n,m-p-k)
-     && \text{by \prope{distributive} property of $\fieldC$}
-     && \text{\xref{def:field}}
-\end{align*}
-\end{proof}
-
-
-%---------------------------------------
-\subsection{Wide Sense Stationary processes}
-\index{wide sense stationary}
-\index{WSS}
-%---------------------------------------
-%---------------------------------------
-\begin{definition}
-%---------------------------------------
-Let $\rvx(n)$ be a random process with \fncte{mean} $\pmeanx(n)$ and
-\fncte{autocorrelation} $\Rxx(n,n+m)$.
-\\
-\defboxt{
-  $\rvx(n)$ is \propd{wide sense stationary} (\propd{WSS}) if
-  \\\indentx
-    $\begin{array}{FlMMD}
-       1. & \pmeanx(n)  & is \prope{constant} with respect to $n$ & (\prope{stationary in the mean})    & and\\
-       2. & \Rxx(n,n+m) & is \prope{constant} with respect to $n$ & (\prope{stationary in correlation})
-    \end{array}$
-  }
-\end{definition}
-
-%---------------------------------------
-\begin{definition}
-\label{def:mean_wss}
-\label{def:Rxxm}
-\label{def:Rxym}
-%---------------------------------------
-Let $\rvx(n)$ be a random process with \fncte{mean} $\pmeanx(n)$ and
-\fncte{autocorrelation} $\Rxx(n,n+m)$.\footnote{
-  The $\pmeanx$ and $\Rxx(m)$ definitions \xref{def:mean_wss} are examples
-  of \hie{function overload}---that is, functions that use the same 
-  mnemonic but are distinguished by different domains.
-  }
-\defbox{
-  \brb{\begin{array}{M}
-    $\rvx$ and $\rvy$ are\\
-    \prope{wide sense stationary}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{FlMrclD}
-      (1). & \pmeanx & is defined as & \pmeanx &\eqd& \pmeanx(0) & and
-    \\(2). & \Rxx(m) & is defined as & \Rxx(m) &\eqd& \Rxx(0,m)  & and
-    \\(3). & \Rxy(m) & is defined as & \Rxy(m) &\eqd& \Rxy(0,m)  & .
-  \end{array}}
-  }
-\end{definition}
-
-%---------------------------------------
-\begin{corollary}
-\label{cor:Rxx}
-%---------------------------------------
-Let $\rvy(n)$ be a \fncte{random process},
-    $\rvx(n)$    a random process with \fncte{autocorrelation} $\Rxx(n,n+m)$,
-and $\Rxy$    the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
-\corbox{
-  \brb{\begin{array}{M}
-    $\rvx$ and $\rvy$ are\\
-    \prope{wide sense stationary}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{rclD}
-    \Rxx(m) &=& \Rxx^\ast(-m) & (\prope{conjugate symmetric})\\ 
-    \Rxy(m) &=& \Ryx^\ast(-m)
-  \end{array}}
-}
-\end{corollary}
-\begin{proof}
-\begin{align*}
-  \Rxy(m)
-     &\eqd \Rxy(0,m)
-     && \text{by definition of $\Rxy(m)$}
-     && \text{\xref{def:Rxym}}
-   \\&= \Ryx^\ast(0+m,-m)
-     && \text{by \prope{non-WSS result}}
-     && \text{\xref{thm:Rxynm}}
-   \\&\eqd \brp{\pE\brs{\rvy(0+m) \rvx^\ast(0+m-m)}}^\ast
-   \\&=    \brp{\pE\brs{\rvy(m-m) \rvx^\ast(0+m-m-m)}}^\ast
-     && \text{by \prope{WSS} hypothesis}
-     && \text{\xref{def:wss}}
-   \\&=    \brp{\pE\brs{\rvy(0) \rvx^\ast(-m)}}^\ast
-   \\&\eqd \Ryx^\ast(0,-m)
-     && \text{by definition of $\Rxy(m,n)$}
-     && \text{\xref{def:Rxy}}
-   \\&\eqd \Ryx^\ast(-m)
-     && \text{by definition of $\Rxy(m)$}
-     && \text{\xref{def:Rxym}}
-   \\
-   \\
-   \Rxx(m)
-     &= \brlr{\Rxy(m)}_{y=x}
-   \\&= \brlr{\Ryx^\ast(-m)}_{y=x}
-     && \text{by previous result}
-   \\&= \Rxx^\ast(-m)
-\end{align*}
-\end{proof}
-
-
-\begin{figure}[ht]\color{figcolor}
-\begin{fsK}
-\begin{center}
-  \setlength{\unitlength}{0.2mm}
-  \begin{picture}(300,100)(-100,-60)
-  \thicklines
-  %\graphpaper[10](0,0)(160,80)
-  \put(-100,  10 ){\makebox (100, 40)[b]{$\rvx(n)$}  }
-  \put(-100, -50 ){\makebox (100, 40)[t]{$\Rxx(m)$}  }
-  \put(-100, -50 ){\makebox (100, 40)[b]{$\Sxx(z)$}  }
-  \put(-100,   0 ){\vector  (  1,  0){100}             }
-  \put(   0, -50 ){\framebox(100,100){$\conv\fh(n)$}  }
-  \put( 100,   0 ){\vector  (  1,  0){100}             }
-  \put( 100,  10 ){\makebox (100, 40)[b]{$\rvy(n)$}  }
-  \put( 100, -50 ){\makebox (100, 40)[t]{$\Ryy(m)$}  }
-  \put( 100, -50 ){\makebox (100, 40)[b]{$\Syy(z)$}  }
-  \put(  50, -60 ){\makebox (  0,  0)[t]{$\Rxy(m)$}  }
-  \end{picture}
-\caption{
-   Linear system with WSS random process input and output
-   \label{fig:d-linear-sys-WSS}
-   }
-\end{center}
-\end{fsK}
-\end{figure}
-
-The next theorem describes the statistical properties of an LTI system
-with impulse response $\fh(t)$ and with an input which is a
-WSS random process \xref{fig:d-linear-sys-WSS}.
-%---------------------------------------
-\begin{corollary}
-\footnote{
-  \citerp{papoulis}{323}
-  }
-%---------------------------------------
-Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$, 
-\fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
-\corboxt{
-  $\brb{\begin{array}{FMMD}
-    (A). & $\opS$ is \prope{linear time invariant}             & (\prope{LTI}) & and\\
-    (B). & $\rvx$ and $\rvy$ are \prope{wide sense stationary} & (\prope{WSS}) & 
-  \end{array}}
-  \quad\implies$
-    \\\qquad$
-  \brb{\begin{array}{Frc>{\ds}lc>{\ds}lD}
-       (1).&\Rxy(m) &=& \Rxx(m)\conv \fh^\ast(m)            &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k)  & and 
-     \\(2).&\Ryy(m) &=& \Rxy(m)\conv \fh(m)                 &\eqd& \sum_{k\in\Z} \fh(k) \Rxy(m-k)        & and 
-     \\(3).&\Ryy(m) &=& \Rxx(m)\conv \fh(m)\conv\fh^\ast(m) &\eqd& \mc{2}{l}{\ds\sum_{p\in\Z}\sum_{k\in\Z}\fh(k)h^\ast(p) \Rxx(m-p-k)}
-  \end{array}}
-  $
-  }
-\end{corollary}
-\begin{proof}
-\begin{align*}
-  \Rxy(m)
-     &\eqd \Rxy(0,m)
-     && \text{by definition of $\Rxy(m)$}
-     && \text{\xref{def:Rxym}}
-   \\&= \Rxx(0,m)\conv \fh^\ast(m) %\eqd \sum_{k\in\Z} \fh^\ast(k) \Rxx(0,m-k) 
-     && \text{by \prope{non-WSS} case}
-     && \text{\xref{thm:Rxyh}}
-   \\&\eqd \Rxx(m)\conv \fh^\ast(m) 
-     && \text{by definition of $\Rxx(m)$}
-     && \text{\xref{def:Rxxm}}
-   \\&\eqd \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k) 
-     && \text{by definition of \ope{convolution}}
-     && \text{\xref{def:dsp_conv}}
-\\
-\\
-  \Ryy(m)
-     &\eqd Ryy(0,m)
-     && \text{by definition of $\Ryy(m)$}
-     && \text{\xref{def:Rxxm}}
-   \\&= \Rxy(0,m)\conv \fh(m) 
-     && \text{by \prope{non-WSS} case}
-     && \text{\xref{thm:Rxyh}}
-   \\&\eqd \Rxy(m)\conv \fh(m) 
-     && \text{by definition of $\Rxy(m)$}
-     && \text{\xref{def:Rxxm}}
-   \\&\eqd \sum_{k\in\Z} \fh(k) \Rxy(m-k) 
-\\
-\\
-  \Ryy(m)
-    &= \Rxy(m)\conv \fh(m) 
-    && \text{by previous result}
-  \\&= \Rxx(m)\conv \fh^\ast(m) \conv \fh(m) 
-    && \text{by previous result}
-  \\&= \Rxx(m)\conv \fh(m) \conv \fh^\ast(m) 
-\\
-\\
-  \Ryy(m) 
-     &\eqd \Ryy(0,m) 
-     && \text{by definition of $\Ryy(m)$}
-     && \text{\xref{def:Rxxm}}
-   \\&= \sum_{p\in\Z} \sum_{k\in\Z} \fh(k)h^\ast(p) \Rxx(0-k,m-p)
-     && \text{by \prope{non-WSS} case}
-     && \text{\xref{thm:Rxyh}}
-   \\&= \sum_{p\in\Z} \sum_{k\in\Z} \fh(k)h^\ast(p) \Rxx(m-p-k)
-     && \text{by definition of $\Rxx(m)$}
-     && \text{\xref{def:Rxxm}}
-\end{align*}
-\end{proof}
-
-%---------------------------------------
-\begin{definition}
-\label{def:psd}
-\label{def:csd}
-%---------------------------------------
-Let $\rvx(n)$ and $\rvy(n)$ be a \prope{wide sense stationary} random processes
-with auto-correlation $\Rxx(m)$ and cross-correlation $\Rxy(m)$.
-Let $\opZ$ be the \ope{Z-transform operator}\ifsxref{dsp}{def:opZ}.
-\\
-\defbox{\begin{array}{MMrclcl}
-   The \opd{power spectral density} & (\opd{PSD}) of $\vx$ is           & \Sxx(z) &\eqd& \opZ{\Rxx(m)} &\eqd& \ds \sum_{m\in\Z} \Rxx(m) z^{-m}\\
-   The \opd{cross spectral density} & (\opd{CSD}) of $\vx$ and $\vy$ is & \Sxy(z) &\eqd& \opZ{\Rxy(m)} &\eqd& \ds \sum_{m\in\Z} \Rxy(m) z^{-m}
-\end{array}}
-\end{definition}
-
-%---------------------------------------
-\begin{theorem}
-\footnote{
-  \citerp{papoulis}{323}
-  }
-\label{thm:Sxy}
-%---------------------------------------
-Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$, 
-\fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
-\thmbox{
-  \brb{\begin{array}{FMD}
-    (A).& $\fh$ is \prope{linear time invariant} & and\\
-    (B).& \mc{2}{M}{$\rvx$ and $\rvy$ are \prope{wide sense stationary}}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{FrclD}
-       (1).&\Sxy(z) &=& \ds \Sxx(z) \Zh^\ast\brp{z^\ast} & and 
-     \\(2).&\Syy(z) &=& \ds \Sxy(z) \Zh(z)               & and 
-     \\(3).&\Syy(z) &=& \mc{2}{l}{\ds \Sxx(z) \Zh(z) \Zh^\ast\brp{z^\ast}}
-  \end{array}}
-  }
-\end{theorem}
-\begin{proof}
-\begin{align*}
-  \Sxy(z)
-     &\eqd \opZ \Rxy(m)
-    && \text{by definition of $\Sxy(z)$}
-    && \text{\xref{def:csd}}
-   \\&= \opZ \brs{\Rxx(m) \conv \fh^\ast(m)}
-    && \text{by \prefp{thm:Rxyh}}
-   \\&= \brs{\opZ\Rxx(m)}\,\opZ\brs{\fh^\ast(m)}
-    && \text{by \thme{convolution theorem}}
-    && \text{\xref{thm:conv}}
-   \\&= \Sxx(z) \Zh^\ast\brp{z^\ast}
-   \\
-   \\
-  \Syy(z)
-     &\eqd \opZ \Ryy(m)
-    && \text{by definition of $\Syy(z)$}
-    && \text{\xref{def:csd}}
-   \\&= \opZ \brs{\Rxy(m) \conv \fh(m)}
-    && \text{by \prefp{thm:Rxyh}}
-   \\&= \brs{\opZ\Rxy(m)}\,\opZ\brs{\fh(m)}
-    && \text{by \thme{convolution theorem}}
-    && \text{\xref{thm:conv}}
-   \\&\eqd \Sxy(z) \Zh(z)
-   \\
-   \\
-  \Syy(z)
-     &= \Sxy(z) \Zh(z)
-     && \text{by previous result}
-   \\&= \Sxx(z) \Zh^\ast\brp{z^\ast} \Zh(z)
-\end{align*}
-\end{proof}
-
-%---------------------------------------
-\begin{corollary}
-\label{cor:Swxy}
-%---------------------------------------
-Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$, 
-\fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
-\corbox{
-  \brb{\begin{array}{FMD}
-    (A).& $\fh$ is \prope{linear time invariant} & and\\
-    (B).& \mc{2}{M}{$\rvx$ and $\rvy$ are \prope{wide sense stationary}}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{FrclD}
-       (1).&\Swxy(\omega) &=& \ds \Swxx(\omega) \Fh^\ast(-\omega) & and 
-     \\(2).&\Swyy(\omega) &=& \ds \Swxy(\omega) \Fh(\omega)       & and 
-     \\(3).&\Swyy(\omega) &=& \mc{2}{l}{\ds \Swxx(\omega) \Fh(\omega) \Fh^\ast(-\omega)}
-  \end{array}}
-  }
-\end{corollary}
-\begin{proof}
-\begin{align*}
-   \Swxy(\omega)
-     &= \brlr{\Sxy(z)}_{z=e^{i\omega}}
-     && \text{by definition of \ope{DTFT}}
-     && \text{\xref{def:dtft}}
-   \\&= \brlr{\Sxx(z)\Zh^\ast(z)}_{z=e^{i\omega}}
-     && \text{by \prefp{thm:Sxy}}
-   \\&= \Sxx\brp{e^{i\omega}}\Zh^\ast\brp{e^{-i\omega}}
-   \\&= \Swxx(\omega) \Fh^\ast(-\omega)
-   \\
-   \Swyy(\omega)
-     &= \brlr{\Syy(z)}_{z=e^{i\omega}}
-     && \text{by definition of \ope{DTFT}}
-     && \text{\xref{def:dtft}}
-   \\&= \brlr{\Sxy(z)\Zh(z)}_{z=e^{i\omega}}
-     && \text{by \prefp{thm:Sxy}}
-   \\&= \Sxy\brp{e^{i\omega}}\Zh\brp{e^{-i\omega}}
-   \\&= \Swxy(\omega) \Fh(\omega)
-   \\
-   \Swyy(\omega)
-     &= \Swxy(\omega) \Fh(\omega)
-     && \text{by previous result}
-   \\&= \Swxx(\omega) \Fh^\ast(-\omega) \Fh(\omega)
-     && \text{by previous result}
-\end{align*}
-\end{proof}
-
-%---------------------------------------
-\begin{corollary}
-\label{cor:Swxy}
-%---------------------------------------
-Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$, 
-\fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
-\corbox{
-  \brb{\begin{array}{FMD}
-    (A).& $\fh$ is \prope{linear time invariant} & and\\
-    (B).& $\rvx$ and $\rvy$ are \prope{wide sense stationary} & and\\
-    (C).& $\fh(n)$ is \prope{real-valued}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{FrclD}
-       (1).&\Swxy(\omega) &=& \ds \Swxx(\omega) \Fh(\omega) & and 
-     \\(2).&\Swyy(\omega) &=& \ds \Swxy(\omega) \Fh(\omega) & and 
-     \\(3).&\Swyy(\omega) &=& \mc{2}{l}{\ds \Swxx(\omega) \Fh(\omega) \Fh(\omega)}
-  \end{array}}
-  }
-\end{corollary}
-\begin{proof}
-\begin{align*}
-   \Swxy(\omega)
-     &= \Swxx(\omega) \Fh^\ast(-\omega)
-     && \text{by \prefp{cor:Swxy}}
-   \\&= \Swxx(\omega) \Fh(\omega)
-     && \text{by hypothesis (C)}
-   \\
-   \Swyy(\omega)
-     &= \Swxy(\omega) \Fh(\omega)
-     && \text{by \prefp{cor:Swxy}}
-   \\
-   \Swyy(\omega)
-     &= \Swxx(\omega) \Fh^\ast(-\omega) \Fh(\omega)
-     && \text{by \prefp{cor:Swxy}}
-   \\&= \Swxx(\omega) \Fh(\omega) \Fh(\omega)
-     && \text{by hypothesis (C)}
-\end{align*}
-\end{proof}
-
-%---------------------------------------
-\subsection{Whitening}
-\index{whitening filter}
-\label{sec:d-whiten}
-%---------------------------------------
-\begin{figure}[h]
-  \centering
-  \includegraphics{graphics/pz_minphase.pdf}
-  \caption{
-     Poles ($\times$) and zeros ($o$) of a \prope{minimum phase} filter
-     \label{fig:w_pz_minphase}
-     }
-\end{figure}
-%---------------------------------------
-\begin{definition}
-\index{minimum phase}
-\index{rational expression}
-%---------------------------------------
-Let $\Zh(z)$ be the z-transform of the impulse response of a filter.
-If $\Zh(z)$ can be expressed as a rational expression with poles and zeros
-$r_ne^{i\theta_n}$,
-then the filter is \textbf{minimum phase} if each $r_n<1$
-(all roots lie inside the unit circle in the complex $z$-plane).
-\end{definition}
-See \prefp{fig:w_pz_minphase}.
-
-Note that if $L(z)$ has a root at $z=re^{i\theta}$, then
-$L^\ast(1/z^\ast)$ has a root at
-\begin{eqnarray*}
-   \frac{1}{z^\ast}
-     &=& \frac{1}{\brp{re^{i\theta}}^\ast}
-      = \frac{1}{re^{-i\theta}}
-      = \frac{1}{r} e^{i\theta}.
-\end{eqnarray*}
-That is, if $L(z)$ has a root inside the unit circle,
-then $L^\ast(1/z^\ast)$ has a root directly opposite across the unit circle
-boundary (see \prefp{fig:z-roots}).
-A causal stable filter $\Z\Zh(z)$ must have all of its poles inside
-the unit circle.
-A minimum phase filter is a filter with both its poles and zeros inside the
-unit circle.
-One advantage of a minimum phase filter is that its recipricol
-(zeros become poles and poles become zeros)
-is also causal and stable.
-
-\begin{figure}[ht]
-\begin{center}
-\begin{fsL}
-\setlength{\unitlength}{0.2mm}
-\begin{picture}(300,300)(-130,-130)
-  %\graphpaper[10](0,0)(200,200)
-  \thicklines%
-  \color{axis}%
-    \put(-130 ,   0 ){\line(1,0){260} }%
-    \put(   0 ,-130 ){\line(0,1){260} }%
-    \put( 140 ,   0 ){\makebox(0,0)[l]{$\Re$}}%
-    \put(   0 , 140 ){\makebox(0,0)[b]{$\Im$}}%
-  \color{zero}%
-    \qbezier[24](  0,  0)( 56.5,56.5)(113,113)
-    %\put(   0 ,   0 ){\line(1,1){120}}%
-    \put(  28 ,  28 ){\circle{10}}%
-    \put( 113 , 113 ){\circle{10}}%
-    \put(  38 ,  28 ){\makebox(0,0)[l]{zero of $L(z)$}}%
-    \put( 123 , 113 ){\makebox(0,0)[l]{zero of $L^\ast\brp{\frac{1}{z^\ast}}$}}%
-  \color{pole}%
-    \qbezier[24](0,0)(-61.5,-26.5)(-123,-53)%
-    %\put(   0 ,   0 ){\line(-3,-1){130}}%
-    \put( -76 , -25 ){\makebox(0,0){$\times$}}%
-    \put(-119 , -40 ){\makebox(0,0){$\times$}}%
-    \put( -76 , -25 ){\makebox(0,0)[lt]{pole of $L(z)$}}%
-    \put(-119 , -40 ){\makebox(0,0)[lt]{pole of $L^\ast\brp{\frac{1}{z^\ast}}$}}%
-  \color{circle}%
-    \input{../common/circle.inp}
-\end{picture}
-\end{fsL}
-\end{center}
-\caption{
-   Mirrored roots in complex-z plane
-   \label{fig:z-roots}
-   }
-\end{figure}
-
-
-\begin{figure}[ht]\color{figcolor}
-\begin{fsK}
-\begin{center}
-  \setlength{\unitlength}{0.2mm}
-  \begin{picture}(700,100)(-100,-60)
-  \thicklines
-  %\graphpaper[10](0,0)(160,80)
-  \put(-100,  10 ){\makebox (100, 40)[b]{$\rvx(n)$}                  }
-  \put(-100, -50 ){\makebox (100, 40)[t]{$\Rxx(m)$}                  }
-  \put(-100, -50 ){\makebox (100, 40)[b]{$\Sxx(z)$}                  }
-  \put(-100,   0 ){\vector  (  1,  0){100}                           }
-
-  \put(   0, -50 ){\framebox(100,100)   {$\conv\gamma(n)$}           }
-  \put(   0, -40 ){\makebox (100, 80)[t]{whitening}                  }
-  \put(   0, -40 ){\makebox (100, 80)[b]{$\Gamma(z)$}                }
-  \put( 100,   0 ){\vector  (  1,  0)   {200}                        }
-  \put( 100,  10 ){\makebox (200, 40)[t]{white noise process}        }
-  \put( 100,  10 ){\makebox (200, 40)[b]{$\vw(n)$}                 }
-  \put( 100, -50 ){\makebox (200, 40)[t]{$\Rww(m)=\delta(m)$}  }
-  \put( 100, -50 ){\makebox (200, 40)[b]{$\Sww(z)=1$}                }
-
-  \put( 300, -50 ){\framebox(100,100)   {$\conv l(n)$}               }
-  \put( 300, -40 ){\makebox (100, 80)[t]{innovations}                }
-  \put( 300, -40 ){\makebox (100, 80)[b]{$L(z)$}                     }
-  \put( 400,   0 ){\vector  (  1,  0)   {100}                        }
-  \put( 400,  10 ){\makebox (100, 40)[b]{$\rvx(n)$}                  }
-  \put( 400, -50 ){\makebox (200, 40)[t]{$\Rxx(m)=l(m)\conv l^\ast(-m)$}  }
-  \put( 400, -50 ){\makebox (200, 40)[b]{$\Sxx(z)=L(z) L^\ast\brp{\frac{1}{z^\ast}}$}  }
-  \end{picture}
-\caption{
-   Innovations and whitening filters
-   \label{fig:d-innovations}
-   }
-\end{center}
-\end{fsK}
-\end{figure}
-
-
-The next theorem demonstrates a method for ``whitening"
-a random process $\fx(n)$ with a filter constructed from a decomposition
-of $\Rxx(m)$.
-The technique is stated precisely in \prefp{thm:d-innovations}
-and illustrated in \prefp{fig:d-innovations}.
-Both imply two filters with impulse responses $l(n)$ and $\gamma(n)$.
-Filter $l(n)$ is referred to as the \textbf{innovations filter}
-(because it generates or ``innovates" $\fx(n)$ from a white noise
-process $\fw(n)$)
-and $\gamma(n)$ is referred to as the \textbf{whitening filter}
-because it produces a white noise sequence when the input sequence
-is $\fx(n)$.\footnote{\citerpp{papoulis}{401}{402}}
-
-
-%---------------------------------------
-\begin{theorem}
-\label{thm:d-innovations}
-%---------------------------------------
-Let $\fx(n)$ be a WSS random process with autocorrelation $\Rxx(m)$
-and spectral density $\Sxx(z)$.
-\textbf{If} $\Sxx(z)$ has a \textbf{rational expression},
-then the following are true:
-
-\begin{enume}
-   \item There exists a rational expression $L(z)$ with minimum phase
-         such that
-         \[ \Sxx(z) = L(z)L^\ast\brp{\frac{1}{z^\ast}}. \]
-   \item An LTI filter for which the Laplace transform of
-         the impulse response $\gamma(n)$ is
-         \[ \Gamma(z) = \frac{1}{L(z)} \]
-         is both causal and stable.
-   \item If $\fx(n)$ is the input to the filter $\gamma(n)$,
-         the output $\fy(n)$ is a \textbf{white noise sequence} such that
-         \[ \Syy(z)=1 \hspace{2cm} \Ryy(m)=\kdelta(m).\]
-\end{enume}
-\end{theorem}
-
-
-\begin{proof}
-\begin{eqnarray*}
-   \Sww(z)
-     &=& \Gamma(z)\Gamma^\ast\brp{\frac{1}{z^\ast}} \Sxx(z)
-   \\&=& \frac{1}{L(z)} \frac{1}{L^\ast\brp{\frac{1}{z^\ast}}} \Sxx(z)
-   \\&=& \frac{1}{L(z)} \frac{1}{L^\ast\brp{\frac{1}{z^\ast}}}
-         L(z) L^\ast\brp{\frac{1}{z^\ast}}
-   \\&=& 1
-\end{eqnarray*}
-\end{proof}
-
-
-
-%=======================================
-\section{Beware of Estimators}
-%=======================================
-Estimators yield, as the name implies, estimates.
-These estimates in general contain some error.
-
-%---------------------------------------
-\begin{example}[The Welch estimate of \ope{coherence} with $K=1$]
-%---------------------------------------
-Suppose we have two \prope{uncorrelated} stationary sequences $\rvx[n]$ and $\rvy[n]$. Then, there 
-CSD $\Sxy(\omega)$ should be $0$ because
-\begin{align*}
-  \Sxy(\omega)
-    &\eqd \opDTFT\pE\Rxy(m)
-  \\&=    \opDTFT\pE\brs{x[n]y[n+m]}
-  \\&=    \opDTFT\brs{\pEx[n]} \brs{\pEy[n+m]}
-  \\&=    \opDTFT\brs{0} \brs{0}
-  \\&=    0
-\end{align*}
-
-This will give a coherence of $0$ also:
-\[ C(\omega) = \frac{\Sxy}{\sqrt{\Sxx\Syy}} = 0\]
-
-However, the Welch estimate with $K=1$ will yield
-\begin{align*}
-  \abs{C(\omega)}
-    &= \abs{\frac{\ds\Sxy}{\sqrt{\ds\Sxx\Syy}}}
-  \\&= \abs{\frac{\ds (\opFT x)(\opFT y)^\ast}{\sqrt{\ds\abs{\opFT x}^2\abs{\opFT y}^2}}}
-  \\&= 1
-\end{align*}
-
-\end{example}
 
 
